--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
     "typescript": "^5.1.3"
   }
 }
